--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,6 +5,7 @@
 
   <div class="login">
     <form class="form-signin">
+      <form class="form-newuser">
       <div class="text-center mb-4">
         <img class="mb-4" src="https://www.fi.edu/sites/default/files/styles/hero_large_two/public/Hero_VR_StockPhoto_iStock_85477625_XLARGE.jpg?itok=SShtDATj" alt="" width="250" height="72">
         <h1 class="h3 mb-3 font-weight-normal">Virtual Class Room</h1>
@@ -27,6 +28,8 @@
         </label>
       </div> -->
       <button class="btn btn-lg btn-primary btn-block" type="button" (click)="onSubmit()">Sign in</button>
+      <button class="btn btn-lg btn-primary btn-block" type="button" (click)="onRoast()">Newuser</button>
       <!-- <p class="mt-5 mb-3 text-muted text-center">&copy; 2017-2018</p> -->
+    </form>
     </form>
 </div>
