--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -26,6 +26,13 @@
     padding: 15px;
     margin: 0 auto;
   }
+  .form-newuser {
+    width: 100%;
+    max-width: 420px;
+    padding: 15px;
+    margin: 0 auto;
+  }
+
   
   .form-label-group {
     position: relative;
