--- a/src/app/teacher/teacher.component.html
+++ b/src/app/teacher/teacher.component.html
@@ -1,16 +1,6 @@
-<p>
-  teacher works!
-</p>
+
 <div>
-    <h1>Insert Data, Update Data and Delete Data In HTML5</h1>
-    <input type="hidden" id="id" />
-    <b>First name:</b><input type="text" id="firstName" /><br />
-    <b>Last name:</b><input type="text" id="lastName" /><br />
-    <b>City:</b><input type="text" id="city" /><br />
-    <b>State:</b><input type="text" id="state" /><br />
-    <b>Phone:</b>
-    <input type="text" id="phone" /><br />
-    <b>Email:</b><input type="text" id="email" /><br />
+    <h1>Insert Data, Update Data and Delete Data </h1>
     <button onclick="InsertData()">Insert Data</button>
     <button onclick="UpdateData()">Update Data</button>
     <button onclick="ClearData()">Clear</button>
