--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -16,7 +16,7 @@
     justify-content: center;
     padding-top: 40px;
     padding-bottom: 40px;
-    background-color: #f5f5f5;
+    background-color: #c02e2e;
     background-image: url("http://www.wrbh.org/wp-content/uploads/2015/06/Books2.jpg");
   }
   
@@ -52,7 +52,7 @@
     width: 100%;
     margin-bottom: 0; /* Override default `<label>` margin */
     line-height: 1.5;
-    color: #495057;
+    color: #24588d;
     border: 1px solid transparent;
     border-radius: .25rem;
     transition: all .1s ease-in-out;
@@ -70,20 +70,16 @@
     color: transparent;
   }
   
-  .form-label-group input::-moz-placeholder {
-    color: transparent;
-  }
+  .form-label-group input::-moz-placeholder {color: transparent;}
   
-  .form-label-group input::placeholder {
-    color: transparent;
-  }
+  .form-label-group input::placeholder {color: transparent;}
   
-  .form-label-group input:not(:placeholder-shown) {
+  .form-label-group input:not(:placeholder-required) {
     padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
     padding-bottom: calc(var(--input-padding-y) / 3);
   }
   
-  .form-label-group input:not(:placeholder-shown) ~ label {
+  .form-label-group input:not(:placeholder-required) ~ label {
     padding-top: calc(var(--input-padding-y) / 3);
     padding-bottom: calc(var(--input-padding-y) / 3);
     font-size: 12px;
