--- a/src/app/newuser/newuser.component.css
+++ b/src/app/newuser/newuser.component.css
@@ -14,7 +14,7 @@ h3{
     font-size: 11pt; 
     font-style: normal;
     font-weight: bold;
-    text-align:; 
+    text-align:center;
     background-color: SlateBlue; 
     border-collapse: collapse; 
     border: 2px solid navy
