--- a/src/app/newuser/newuser.component.html
+++ b/src/app/newuser/newuser.component.html
@@ -1,13 +1,16 @@
 <html>
 <head>
-<title>Student Registration Form</title>
+<title> Registration Form</title>
 
 </head>
  
 <body>
-<h3>STUDENT REGISTRATION FORM</h3>
+<h3> REGISTRATION FORM</h3>
 <form>
 
+    
+
+        
  
 <table align="center" cellpadding = "10">
  
@@ -24,6 +27,14 @@
 <td>LAST NAME</td>
 <td><input type="text" name="Last_Name" maxlength="30"/>
 (max 30 characters a-z and A-Z)
+</td>
+</tr>
+<!----- Register for ----------------------------------------------------------->
+<tr>
+<td>REGISTER FOR</td>
+<td>
+Teacher <input type="radio" name="Teacher" value="Teacher" />
+Student <input type="radio" name="Student" value="Student" />
 </td>
 </tr>
  
