--- a/src/app/newuser/newuser.component.html
+++ b/src/app/newuser/newuser.component.html
@@ -281,7 +281,7 @@ Others
  
 <!----- Course ---------------------------------------------------------->
 <tr>
-<td>COURSES<br />APPLIED FOR</td>
+<td>COURSES APPLIED FOR (TEACHERS) </td>
 <td>
 BCA
 <input type="radio" name="Course_BCA" value="BCA">
@@ -294,6 +294,22 @@ B.tech
 </td>
 </tr>
  
+
+ <!----- Course ---------------------------------------------------------->
+<tr>
+    <td>COURSES OFFERED (STUDENTS) </td>
+    <td>
+    BCA
+    <input type="radio" name="Course_BCA" value="BCA">
+    B.Com
+    <input type="radio" name="Course_BCom" value="B.Com">
+    B.Sc
+    <input type="radio" name="Course_BSc" value="B.Sc">
+    B.tech
+    <input type="radio" name="Course_Btech" value="B.tech">
+    </td>
+    </tr>
+         
 <!----- Submit and Reset ------------------------------------------------->
 <tr>
 <td colspan="2" align="center">
