--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -24,7 +24,7 @@
 
             <ul>
 			
-				<li><a href="#/home.html">Home</a></li><text align:center></text>
+				<li><a href="#/home.html">Home</a></li>
 				<li><a>Lastest Uploads</a></li>
                 <li><a>Quiz papers</a></li>
                 <li><a>Mock papers</a></li>
@@ -32,6 +32,28 @@
                 <li><a>Course wise syllabus</a></li>
                 <li><a>Videos</a></li>
 			</ul>
+			<div class="w3-content" style="max-width:1200px">
+					<img class="mySlides" src="books1.jpg" style="width:100%">
+					<img class="mySlides" src="img_fjords_wide.jpg" style="width:100%">
+					<img class="mySlides" src="img_mountains_wide.jpg" style="width:100%">
+				  
+					<div class="w3-row-padding w3-section">
+					  <div class="w3-col s4">
+						<img class="demo w3-opacity" 
+						src="img_nature_wide.jpg" onclick="currentDiv(1)">
+					  </div>
+					  <div class="w3-col s4">
+						<img class="demo w3-opacity"
+						src="img_fjords_wide.jpg" onclick="currentDiv(2)">
+					  </div>
+					  <div class="w3-col s4">
+						<img class="demo w3-opacity" 
+						src="img_mountains_wide.jpg" onclick="currentDiv(3)">
+					  </div>
+					</div>
+				  </div>
+				  
+				  
 		</div>
 		<div id="content">
 			<h2>Home</h2>
