--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,12 +13,12 @@
       </div>
 
       <div class="form-label-group">
-        <input type="text" id="inputEmail" class="form-control" placeholder="Email address"  name="first" required [(ngModel)]="username" autofocus>
+        <input type="text" id="inputEmail" class="form-control" placeholder="Email address"  name="first" required [(ngModel)]="username" autocomplete="off">
         <label for="inputEmail">User Name</label>
       </div>
 
       <div class="form-label-group">
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" name="second" required [(ngModel)]="password" autofocus>
+        <input type="password" id="inputPassword" class="form-control" placeholder="Password" name="second" required [(ngModel)]="password" autocomplete="off">
         <label for="inputPassword">Password</label>
       </div>
 
