--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -25,14 +25,16 @@
             <ul>
 			
 				<li><a href="#/home.html">Home</a></li>
-				<li><a>Lastest Uploads</a></li>
+				<li><a>Latest Uploads</a></li>
                 <li><a>Quiz papers</a></li>
                 <li><a>Mock papers</a></li>
 				<li><a>Courses</a></li>
                 <li><a>Course wise syllabus</a></li>
                 <li><a>Videos</a></li>
 			</ul>
-			
+		
+								
+								
 				  
 		</div>
 		<div id="content">
