--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -31,22 +31,11 @@
                 <li><a>Mock papers</a></li>
 				<li><a>Courses</a></li>
                 <li><a>Course wise syllabus</a></li>
-                <li><a>Videos</a></li>
+				<li><a>Videos</a></li>
+				<li><a>Faculty session appointments</a></li>
+				
 			</ul>
-			<form>
-					  <div>
-						<label for="appt-time">Choose an appointment time (opening hours 12:00 to 18:00): </label>
-						<input id="appt-time" type="time" name="appt-time"
-						       min="12:00" max="18:00" required>
-						<span class="validity"></span>
-					  </div>
-					  <div>
-					      <input type="submit" value="Submit">
-					  </div>
-					</form>
-					
-							
-					
+			
 								
 				  
 		</div>
@@ -54,11 +43,9 @@
 		<div id="content">
 			<h2>Home</h2>
 			<p>
-				This is my first webpage! I was able to code all the HTML and CSS in order to make it. Watch out world of web design here I come!
+          Links you directly back to the home page.
 			</p>
-			<p> 
-				I can use my skills here to create websites for my business, my friends and family, my C.V, blog or articles. As well as any games or more experiment stuff (which is what the web is really all about). 
-			</p>
+		
 		</div>
 		<div id="footer">
 			<p>
