--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,13 @@
-<router-outlet></router-outlet>
+<div class="container" style="width:400px">
+	<div style="color: blue; margin-bottom: 20px">
+		<h1>{{title}}</h1>
+		<h3>{{description}}</h3>
+	</div>
+ 
+	<form-upload></form-upload>
+	
+	<br/>
+	<br/>
+	
+	<list-upload></list-upload>
+</div>
