--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -53,13 +53,13 @@
     margin-bottom: 0; /* Override default `<label>` margin */
     line-height: 1.5;
     color: #24588d;
-    border: 1px solid transparent;
+    border: 1px solid none;
     border-radius: .25rem;
     transition: all .1s ease-in-out;
   }
   
   .form-label-group input::-webkit-input-placeholder {
-    color: transparent;
+    color: none;
   }
   
   .form-label-group input:-ms-input-placeholder {
@@ -82,7 +82,7 @@
   .form-label-group input:not(:placeholder-required) ~ label {
     padding-top: calc(var(--input-padding-y) / 3);
     padding-bottom: calc(var(--input-padding-y) / 3);
-    font-size: 12px;
+    font-size: 1px;
     color: #777;
   }
   
