--- a/src/app/student/student.component.css
+++ b/src/app/student/student.component.css
@@ -14,15 +14,15 @@ a{
 	float:left;
     position:relative;
  
-    border-right:1px solid #d8d8d8;
-	border-left:1px solid #ffffff;
+    border: right 0.2px solid #d8d8d8;
+	border: left 0.2px solid #ffffff;
 	font-family:'Times New Roman', Helvetica, sans-serif;
     font-size:1.00em;
     font-weight:bold;
     color:#666666;
     text-shadow:0px 1px 0px #ffffff;
  
-    display: block;
+    display: inline-block;
     padding:0 1em;
     line-height:2.5em;
 }
@@ -36,7 +36,7 @@ body{
 	background-image: url("http://www.wrbh.org/wp-content/uploads/2015/06/Books2.jpg");
 }
 /* you can put your code all in one line like above */
-#page{ margin: 20px; }
+#page{ margin: 30px; }
 
 /* or on different lines like below */
 #logo{
@@ -45,7 +45,69 @@ body{
 	font-family: georgia;
 	display: inline-block;
 }
+.slider-holder
+{
+	width: 80px;
+	height: 40px;
+	background-color: yellow;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 0px;
+	text-align: center;
+	overflow: center;
+}
 
+.image-holder
+{
+	width: 240px;
+	background-color: red;
+	height: 40px;
+	clear: both;
+	position: center;
+	
+	-webkit-transition: center 2s;
+	-moz-transition: center 2s;
+	-o-transition: center 2s;
+	transition: center 2s;
+}
+
+.slider-image
+{
+	float: center;
+	margin: 0px;
+	padding: 0px;
+	position: center;
+}
+
+#slider-image-1:target ~ .image-holder
+{
+	left: 0px;
+}
+
+#slider-image-2:target ~ .image-holder
+{
+	left: -800px;
+}
+
+#slider-image-3:target ~ .image-holder
+{
+	left: -1600px;
+}
+
+.button-holder
+{
+	position: center;
+	top: -20px;
+}
+
+.slider-change
+{
+	display: inline-block;
+	height: 10px;
+	width: 10px;
+	border-radius: 5px;
+	background-color: brown;
+}
 /* but try and be as concise as possible */
 #nav{
 	width: 180%;
@@ -57,10 +119,10 @@ body{
 	#nav ul li{
 
 			display: inline-block;
-			height: 62px;
+			height: 50px;
 		}
 			#nav ul li a{
-				padding: 20px;
+				padding: 10px;
 				background: orange;
 				color: white;
 			}
