--- a/src/app/teacher/teacher.component.html
+++ b/src/app/teacher/teacher.component.html
@@ -1,22 +1,4 @@
-
-<html>
-    <head>
-    
-    <!-- your webpage info goes here -->
-    
-        <title>Dashboard</title>
-        
-        <meta name="author" content="your name" />
-        <meta name="description" content="" />
-    
-    <!-- you should always add your stylesheet (css) in the head tag so that it starts loading before the page html is being displayed -->	
-        
-    </head>
-    <body>
-    
-    <!-- webpage content goes here in the body -->
-        
-            
+             
         <div id="page">
             <div id="logo">
                 <h1><a>Dashboard</a></h1>
@@ -37,7 +19,7 @@
                 
                 
                   
-
+                <form-upload></form-upload>
                
                 <label for="myCOURSE">UPLOADS</label>
                 <input type="text" id="myCOURSE" name="COURSE" list="COURSELIST">
@@ -81,8 +63,7 @@
                 </p>
             </div>
         </div>
-    </body>
-    </html>
+   
     
             
             
