--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<router-outlet></router-outlet>
+<!-- 
 <div class="container" style="width:400px">
 	<div style="color: blue; margin-bottom: 20px">
 		<h1>{{title}}</h1>
@@ -10,4 +12,4 @@
 	<br/>
 	
 	<list-upload></list-upload>
-</div>
+</div> -->
