--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -1,29 +1,12 @@
 
-<html>
-<head>
-
-<!-- your webpage info goes here -->
-
-	<title>Dashboard</title>
-	
-	<meta name="author" content="your name" />
-	<meta name="description" content="" />
-
-<!-- you should always add your stylesheet (css) in the head tag so that it starts loading before the page html is being displayed -->	
-	
-</head>
-<body>
-
-<!-- webpage content goes here in the body -->
-	
 		
 	<div id="page">
 		<div id="logo">
-			<h1><a>Dashboard</a></h1>
+			<h1><a>Welcome</a></h1>
 		</div>
-		<div id="nav">
+		 <div >
 
-            <ul>
+        <!--    <ul>
 			
 				<li><a href="#/home.html">Home</a></li>
 				<li><a>Latest Uploads</a></li>
@@ -43,18 +26,32 @@
 		<div id="content">
 			<h2>Home</h2>
 			<p>
-          Links you directly back to the home page.
+				<list-upload ></list-upload>
 			</p>
-		
+		 -->
+
+		 <mat-tab-group class="student-tab">
+			<mat-tab label="Latest Uploads">
+					<list-upload ></list-upload>
+			</mat-tab>
+			<mat-tab label="Quiz papers"></mat-tab>
+			<mat-tab label="Mock papers"></mat-tab>
+			<mat-tab label="Courses"></mat-tab>
+			<mat-tab label="Course wise syllabus"></mat-tab>
+			<mat-tab label="Videos">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/UB1O30fR-EE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/yfoY53QXEnI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen> </iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/vEROU2XtPR8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			</mat-tab>
+		  </mat-tab-group>
 		</div>
 		<div id="footer">
-			<p>
-				Webpage made by <a href="/" target="_blank">[your name]</a>
-			</p>
+			
 		</div>
 	</div>
-</body>
-</html>
+
+
+
 
 		
 		
