--- a/src/styles.css
+++ b/src/styles.css
@@ -18,3 +18,7 @@ body{background-image: url("http://www.wrbh.org/wp-content/uploads/2015/06/Books
     background-size: cover;
 
 }
+
+.mat-tab-body{
+    background: #ffffff4a
+}
