--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,12 +14,12 @@
 
       <div class="form-label-group">
         <input type="text" id="inputEmail" class="form-control" placeholder="Email address"  name="first" required [(ngModel)]="username" autocomplete="off">
-        <label for="inputEmail">User Name</label>
+        <label for="inputEmail"></label>
       </div>
 
       <div class="form-label-group">
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" name="second" required [(ngModel)]="password" autocomplete="off">
-        <label for="inputPassword">Password</label>
+        <label for="inputPassword"></label>
       </div>
 
       <!-- <div class="checkbox mb-3">
