--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,27 +9,42 @@
       <div class="text-center mb-4">
         <img class="mb-4" src="https://www.fi.edu/sites/default/files/styles/hero_large_two/public/Hero_VR_StockPhoto_iStock_85477625_XLARGE.jpg?itok=SShtDATj" alt="" width="250" height="72">
         <h1 class="h3 mb-3 font-weight-normal">Virtual Class Room</h1>
-        <!-- <p>Build form controls with floating labels via the <code>:placeholder-shown</code> pseudo-element. <a href="https://caniuse.com/#feat=css-placeholder-shown">Works in latest Chrome, Safari, and Firefox.</a></p> -->
+        
       </div>
 
       <div class="form-label-group">
         <input type="text" id="inputEmail" class="form-control" placeholder="Email address"  name="first" required [(ngModel)]="username" autocomplete="off">
-        <label for="inputEmail">User Name</label>
+        <label for="inputEmail"></label>
       </div>
 
       <div class="form-label-group">
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" name="second" required [(ngModel)]="password" autocomplete="off">
-        <label for="inputPassword">Password</label>
+        <label for="inputPassword"></label>
       </div>
 
-      <!-- <div class="checkbox mb-3">
-        <label>
-          <input type="checkbox" value="remember-me"> Remember me
-        </label>
-      </div> -->
       <button class="btn btn-lg btn-primary btn-block" type="button" (click)="onSubmit()">Sign in</button>
-      <button class="btn btn-lg btn-primary btn-block" type="button" (click)="onRoast()">New user</button>
-      <!-- <p class="mt-5 mb-3 text-muted text-center">&copy; 2017-2018</p> -->
+      <!-- <button class="btn btn-lg btn-primary btn-block" type="button" (click)="onRoast()">New user</button> -->
+    
+      <div class="form-group">
+        <!-- <button type="buton" class="btn btn-block" (click)="signInWithFacebook()">
+          <i class="fa fa-facebook" aria-hidden="true"></i> 
+          Login with Facebook
+        </button>
+    <button type="button" class="btn btn-block" (click)="signInWithTwitter()">
+          <i class="fa fa-twitter" aria-hidden="true"></i>
+          Login with Twitter
+        </button>
+    <button type="button" class="btn btn-block" (click)="signInWithGithub()">
+          <i class="fa fa-github" aria-hidden="true"></i>
+          Login with Github
+        </button> -->
+    <button type="button" class="btn btn-block" (click)="signInWithGoogle()">
+          <i class="fa fa-google" aria-hidden="true"></i>
+        Students Login with Google
+        </button>
+    </div>                  
+    
+
     </form>
     </form>
 </div>
