--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -44,6 +44,7 @@
 			<mat-tab label="Courses"></mat-tab>
 			<mat-tab label="Course wise syllabus"></mat-tab>
 			<mat-tab label="Videos">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/n7eja4DJPQ0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/UB1O30fR-EE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/yfoY53QXEnI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen> </iframe>
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/vEROU2XtPR8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
