--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -132,9 +132,9 @@
 			</mat-tab> -->
 		  </mat-tab-group>
 		</div>
-		<div id="footer">
+		<!-- <div id="footer">
 			
-		</div>
+		</div> -->
 	</div>
 
 
