--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -42,10 +42,15 @@
 				<!-- <form-upload-mock></form-upload-mock> -->
 					<list-upload-mock ></list-upload-mock>
 			</mat-tab>
-			<mat-tab label="Courses"></mat-tab>
 			<mat-tab label="Course wise syllabus"></mat-tab>
+			<mat-tab label="Live Class Room ES">
+
+				<iframe width="800" height="500" src="https://www.youtube.com/embed/live_stream?channel=UCIuFuknQ8Qfz29fBVn4Y2Qg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			</mat-tab>
 	
-			<mat-tab label="Videos"><iframe width="560" height="315" src="https://www.youtube.com/embed/live_stream?channel=UCTZweIqEsVpqrKZML_4PFRg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>		<iframe width="560" height="315" src="https://www.youtube.com/embed/rohit1original/live" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			<mat-tab label="Videos">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/live_stream?channel=UCIuFuknQ8Qfz29fBVn4Y2Qg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>	
+					<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/rohit1original/live" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/UB1O30fR-EE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/UB1O30fR-EE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/yfoY53QXEnI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen> </iframe>
