--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -107,7 +107,7 @@
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/yfoY53QXEnI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen> </iframe>
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/vEROU2XtPR8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 			</mat-tab> -->
-			<!-- <mat-tab label="Forum">
+			<mat-tab label="Forum">
 				<div class="container-fluid">
 				
 					<div style="width: 300px;">
@@ -129,7 +129,7 @@
 						<pre *ngFor="let item of items | async">{{item.content}} </pre>
 					</div>
 				</div>
-			</mat-tab> -->
+			</mat-tab>
 		  </mat-tab-group>
 		</div>
 		<!-- <div id="footer">
