new live classroom link

--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -46,16 +46,16 @@
 	
 				<embed src="http://www.du.ac.in/du/uploads/Admissions/Cut-off/2013/Fifth/BTech.pdf" width="800px" height="2100px" >
 				<!--<form-upload></form-upload> -->
-				<list-upload></list-upload>
+				<!-- <list-upload></list-upload> -->
 			
 			</mat-tab>
 			<mat-tab label="Live Class Room ES">
 
-				<iframe width="800" height="500" src="https://www.youtube.com/embed/live_stream?channel=UCIuFuknQ8Qfz29fBVn4Y2Qg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				<iframe width="800" height="500" src="https://www.youtube.com/embed/live_stream?channel=UCTZweIqEsVpqrKZML_4PFRg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 			</mat-tab>
 	
 			<mat-tab label="Videos">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/live_stream?channel=UCIuFuknQ8Qfz29fBVn4Y2Qg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>	
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/live_stream?channel=UCTZweIqEsVpqrKZML_4PFRg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>	
 					<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/rohit1original/live" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/UB1O30fR-EE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/UB1O30fR-EE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
